# aissh

./: .gitignore  README.md  index.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.electron.ts  vite.config.ts
.github/workflows/: release.yml
.trae/documents/: 编辑文档.md
back/: package.json
back-rust/: Cargo.toml  README.md
back-rust/src/: main.rs  ssh_service.rs  types.rs
components/AISSH/: AISSH.tsx
components/AISSH/common/: ContextMenu.tsx
components/AISSH/components/: AIChatPanel.tsx  AddServerModal.tsx  ServerTree.tsx  SessionTabs.tsx  Terminal.tsx
components/AISSH/components/FileEditor/: FileBrowser.tsx  FileTabs.tsx
components/AISSH/services/: geminiService.ts  sshService.ts
components/AISSH/store/: useFileStore.ts  useSSHStore.ts
components/AISSH/types/: index.ts
electron/: installer.nsh  main.cjs
scripts/: prepare-tauri-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
